--- a/src/Rosetta.Server/Rosetta.Server.csproj
+++ b/src/Rosetta.Server/Rosetta.Server.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+
+    <!--
+    Ideally would be net6 but that requires digging into MSBuild to get
+    the VSIX project reference to work. TBD.
+    -->
+    <TargetFramework>net472</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.LanguageServer.Protocol.Extensions" Version="17.1.8" />
+    <PackageReference Include="StreamJsonRpc" Version="2.10.44" />
+  </ItemGroup>
 
 </Project>
