--- a/src/Rosetta/Rosetta.VSExtension.csproj
+++ b/src/Rosetta/Rosetta.VSExtension.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>Rosetta</RootNamespace>
     <AssemblyName>Rosetta.VSExtension</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <GeneratePkgDefFile>true</GeneratePkgDefFile>
+    <GeneratePkgDefFile>false</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
     <IncludeDebugSymbolsInVSIXContainer>false</IncludeDebugSymbolsInVSIXContainer>
@@ -45,8 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ContentType.cs" />
+    <Compile Include="LanguageClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RosettaPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -55,10 +56,70 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.0.32112.339" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="[17.1.32210.191]" ExcludeAssets="runtime">
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.0.64" />
+    <PackageReference Include="Microsoft.VisualStudio.Validation" Version="16.10.35" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.3.7-preview1" />
+    <PackageReference Include="Nerdbank.Streams" Version="2.8.57" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="StreamJsonRpc" Version="2.10.44" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Rosetta.Server\Rosetta.Server.csproj">
+      <Project>{31f23308-2621-45fb-a538-f9c966da9ff8}</Project>
+      <Name>Rosetta.Server</Name>
+      <VSIXSubPath>.</VSIXSubPath>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="$(NugetPackageRoot)\StreamJsonRpc\2.10.42\lib\netstandard2.0\StreamJsonRpc.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\Microsoft.VisualStudio.Validation\16.10.35\lib\netstandard2.0\Microsoft.VisualStudio.Validation.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\System.Threading.Tasks.Extensions\4.5.3\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\Microsoft.VisualStudio.Threading\17.0.64\lib\netstandard2.0\Microsoft.VisualStudio.Threading.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\Newtonsoft.Json\13.0.1\lib\netstandard2.0\Newtonsoft.Json.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\Nerdbank.Streams\2.8.57\lib\netstandard2.0\Nerdbank.Streams.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\System.Collections.Immutable\5.0.0\lib\netstandard2.0\System.Collections.Immutable.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
+    <Content Include="$(NugetPackageRoot)\System.Runtime.CompilerServices.Unsafe\6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+      <VSIXSubPath>.</VSIXSubPath>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
