Initial grammar parser.

--- a/src/Rosetta.Analysis.Tests/Rosetta.Analysis.Tests.csproj
+++ b/src/Rosetta.Analysis.Tests/Rosetta.Analysis.Tests.csproj
@@ -25,10 +25,22 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Grammars\MixedAndOr.rosetta.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Grammars\OrRule.rosetta.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Grammars\Empty.rosetta.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Grammars\HelloWorld.rosetta.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Grammars\AndRule.rosetta.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Grammars\StringMatchRule.rosetta.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
