--- a/src/Rosetta.Analysis.Tests/Rosetta.Analysis.Tests.csproj
+++ b/src/Rosetta.Analysis.Tests/Rosetta.Analysis.Tests.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Grammars\ReferenceRule.rosetta.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Grammars\MixedAndOr.rosetta.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
