Fix issue with blank lines in grammars.

--- a/src/Rosetta.Analysis.Tests/Rosetta.Analysis.Tests.csproj
+++ b/src/Rosetta.Analysis.Tests/Rosetta.Analysis.Tests.csproj
@@ -28,6 +28,9 @@
     <None Update="Grammars\Arithmetic.rosetta.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Grammars\BlankLine.rosetta.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Grammars\ReferenceRule.rosetta.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -38,9 +41,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Grammars\Empty.rosetta.md">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Grammars\HelloWorld.rosetta.md">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Grammars\AndRule.rosetta.md">
